[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/MenuButtonSoundPlayer.gd" type="Script" id=1]
[ext_resource path="res://scripts/Root.gd" type="Script" id=2]
[ext_resource path="res://scenes/DeathScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/CreditsScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/sounds/UI_menuButton.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/StartMenuScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/MenuScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/sounds/Pyramid.mp3" type="AudioStream" id=9]
[ext_resource path="res://resources/sounds/Menu.mp3" type="AudioStream" id=10]
[ext_resource path="res://scenes/OptionsScreen.tscn" type="PackedScene" id=15]

[node name="Root" type="Node2D" groups=[
"Root",
]]
pause_mode = 2
scale = Vector2( 1.00172, 0.998806 )
script = ExtResource( 2 )

[node name="MenuScreenLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="MenuScreen" parent="MenuScreenLayer" instance=ExtResource( 7 )]
pause_mode = 2
visible = false

[node name="StartMenuScreen" parent="MenuScreenLayer" instance=ExtResource( 6 )]
pause_mode = 2
visible = false

[node name="OptionsScreen" parent="MenuScreenLayer" instance=ExtResource( 15 )]
pause_mode = 2
visible = false

[node name="CreditsScreen" parent="MenuScreenLayer" instance=ExtResource( 4 )]
visible = false

[node name="DeathScreen" parent="MenuScreenLayer" instance=ExtResource( 3 )]
visible = false

[node name="MenuButtonSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SoundEffects"
script = ExtResource( 1 )

[node name="MusicLoopPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Music"

[node name="MenuMusicLoopPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Music"

[connection signal="button_pressed" from="MenuScreenLayer/MenuScreen" to="MenuButtonSoundPlayer" method="_on_MenuScreen_button_pressed"]
[connection signal="pause" from="MenuScreenLayer/MenuScreen" to="." method="_on_MenuScreen_pause"]
[connection signal="quit_game" from="MenuScreenLayer/MenuScreen" to="." method="_on_MenuScreen_quit_game"]
[connection signal="restart_game" from="MenuScreenLayer/MenuScreen" to="." method="_on_MenuScreen_restart_game"]
[connection signal="restart_level" from="MenuScreenLayer/MenuScreen" to="." method="_on_MenuScreen_restart_level"]
[connection signal="unpause" from="MenuScreenLayer/MenuScreen" to="." method="_on_MenuScreen_unpause"]
[connection signal="button_pressed" from="MenuScreenLayer/StartMenuScreen" to="MenuButtonSoundPlayer" method="_on_StartMenuScreen_button_pressed"]
[connection signal="quit_game" from="MenuScreenLayer/StartMenuScreen" to="." method="_on_StartMenuScreen_quit_game"]
[connection signal="start_game" from="MenuScreenLayer/StartMenuScreen" to="." method="_on_StartMenuScreen_start_game"]
[connection signal="button_pressed" from="MenuScreenLayer/OptionsScreen" to="MenuButtonSoundPlayer" method="_on_OptionsScreen_button_pressed"]
[connection signal="screenClosed" from="MenuScreenLayer/OptionsScreen" to="MenuScreenLayer/StartMenuScreen" method="_on_OptionsScreen_screenClosed"]
[connection signal="screenClosed" from="MenuScreenLayer/OptionsScreen" to="MenuScreenLayer/MenuScreen" method="_on_OptionsScreen_screenClosed"]
[connection signal="button_pressed" from="MenuScreenLayer/CreditsScreen" to="MenuButtonSoundPlayer" method="_on_CreditsScreen_button_pressed"]
[connection signal="screenClosed" from="MenuScreenLayer/CreditsScreen" to="MenuScreenLayer/StartMenuScreen" method="_on_CreditsScreen_screenClosed"]
[connection signal="button_pressed" from="MenuScreenLayer/DeathScreen" to="MenuButtonSoundPlayer" method="_on_DeathScreen_button_pressed"]
[connection signal="pause" from="MenuScreenLayer/DeathScreen" to="." method="_on_DeathScreen_pause"]
[connection signal="quit_game" from="MenuScreenLayer/DeathScreen" to="." method="_on_DeathScreen_quit_game"]
[connection signal="restart_game" from="MenuScreenLayer/DeathScreen" to="." method="_on_DeathScreen_restart_game"]
[connection signal="unpause" from="MenuScreenLayer/DeathScreen" to="." method="_on_DeathScreen_unpause"]
